Change updateURL to reference manifest.json within .sketchplugin.
Remove extra JSON file.

--- a/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
+++ b/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/mscodemonkey/Sketch-Find-And-Replace",
   "version": 1.13,
   "identifier": "com.martinsteven.sketch-find-and-replace",
-  "updateURL": "https://raw.githubusercontent.com/mscodemonkey/Sketch-Find-And-Replace/master/FindAndReplace.json",  
+  "updateURL": "https://raw.githubusercontent.com/mscodemonkey/Sketch-Find-And-Replace/master/Find%20And%20Replace.sketchplugin/Contents/Sketch/manifest.json",
   "compatibleVersion": 3.03,
   "bundleVersion": 1,
   "commands" : [
