--- a/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
+++ b/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Find And Replace",
-  "description": "Sketch plugin to do a find and replace on text items",
+  "description": "A robust tool for changing text within layers and symbol overrides.",
   "author": "Martin Steven",
   "homepage": "https://github.com/mscodemonkey/Sketch-Find-And-Replace",
   "version": 1.13,
