Change "And" within name to "and" to look nice and sharp :)

--- a/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
+++ b/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Find And Replace",
+  "name": "Find and Replace",
   "description": "A robust tool for changing text within layers and symbol overrides.",
   "author": "Martin Steven",
   "homepage": "https://github.com/mscodemonkey/Sketch-Find-And-Replace",
