--- a/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
+++ b/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
@@ -2,8 +2,9 @@
   "name": "Find and Replace",
   "description": "A robust tool for changing text within layers and symbol overrides.",
   "author": "Martin Steven and Thierry Charbonnel",
+  "authorEmail" : "thierry.charbonnel@autreplanete.com",
   "homepage": "https://github.com/thierryc/Sketch-Find-And-Replace/",
-  "version": 1.6,
+  "version": 1.7,
   "identifier": "cx.ap.sketch-find-and-replace",
   "updateURL": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/Find%20And%20Replace.sketchplugin/Contents/Sketch/manifest.json",
   "appcast": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/appcast.xml",
