--- a/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
+++ b/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
@@ -6,6 +6,7 @@
   "homepage": "https://github.com/thierryc/Sketch-Find-And-Replace/",
   "version": 1.7,
   "identifier": "cx.ap.sketch-find-and-replace",
+  "icon" : "runner-icon.png",
   "updateURL": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/Find%20And%20Replace.sketchplugin/Contents/Sketch/manifest.json",
   "appcast": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/appcast.xml",
   "compatibleVersion": 3.03,
