--- a/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
+++ b/Find And Replace.sketchplugin/Contents/Sketch/manifest.json
@@ -4,9 +4,9 @@
   "author": "Martin Steven and Thierry Charbonnel",
   "authorEmail" : "thierry.charbonnel@autreplanete.com",
   "homepage": "https://github.com/thierryc/Sketch-Find-And-Replace/",
-  "version": "1.22",
+  "version": "1.23",
   "identifier": "cx.ap.sketch-find-and-replace",
-  "icon" : "runner-icon.png",
+  "icon" : "sketch-find-and-replace.png",
   "updateURL": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/Find%20And%20Replace.sketchplugin/Contents/Sketch/manifest.json",
   "appcast": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/appcast.xml",
   "compatibleVersion": 3.03,
