--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 _test/
+
+# build artefacts
+plugin.sketchplugin/Contents/Sketch
+plugin.sketchplugin/Contents/Resources/_webpack_resources
+
+# npm
+node_modules
+.npm
+npm-debug.log
+
+# mac
+.DS_Store
