--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Find and Replace",
   "description": "A robust tool for changing text within layers and symbol overrides.",
-  "author": "Martin Steven and Thierry Charbonnel",
+  "author": "Thierry Charbonnel",
   "authorEmail" : "thierry.charbonnel@autreplanete.com",
   "homepage": "https://github.com/thierryc/Sketch-Find-And-Replace/",
   "version": "2.0",
   "identifier": "cx.ap.sketch-find-and-replace",
-  "updateURL": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/Find%20And%20Replace.sketchplugin/Contents/Sketch/manifest.json",
-  "appcast": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/appcast.xml",
+  "updateURL": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/Find-and-replace.sketchplugin/Contents/Sketch/manifest.json",
+  "appcast": "https://raw.githubusercontent.com/thierryc/Sketch-Find-And-Replace/master/.appcast.xml",
   "compatibleVersion": 3,
   "bundleVersion": 1,
   "icon": "icon.png",
