--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sketch-find-and-replace",
+  "description": "find-and-replace Plugin for sketch",
   "version": "2.5.2",
   "engines": {
     "sketch": ">=3.0"
@@ -31,7 +32,7 @@
     "postinstall": "npm run build && skpm-link"
   },
   "devDependencies": {
-    "@skpm/builder": "^0.5.16",
+    "@skpm/builder": "^0.7.4",
     "@skpm/extract-loader": "^2.0.2",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
