--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,7 +15,7 @@
       "name": "Find And Replace",
       "identifier": "Find-and-replace",
       "script": "./Find-and-replace.js",
-      "shortcut" : "cmd option f"
+      "shortcut" : "cmd option shift f"
     }
   ],
   "menu": {
