--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "sketch-module-web-view": "^3.4.1",
+    "skpm": "^1.3.1",
     "styled-components": "^4.4.1"
   }
 }
