--- a/package.json
+++ b/package.json
@@ -32,23 +32,23 @@
     "postinstall": "npm run build && skpm-link"
   },
   "devDependencies": {
-    "@skpm/builder": "^0.7.5",
-    "@skpm/extract-loader": "^2.0.2",
+    "@skpm/builder": "^0.7.11",
+    "@skpm/extract-loader": "^2.0.3",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "skpm": "^1.3.1",
-    "html-loader": "^0.5.5"
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-standard": "^4.1.0",
+    "html-loader": "^0.5.5",
+    "skpm": "^1.3.2"
   },
   "author": "Thierry Charbonnel <thierryc@users.noreply.github.com>",
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "sketch-module-web-view": "^3.4.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "sketch-module-web-view": "^3.5.1",
     "styled-components": "^4.4.1"
   }
 }
